# isaac-sim-radar

./: .dockerignore  .gitignore  EXECUTION_PLAN.md  PROJECT_PLAN.md  README.md  REPORT.md  install_ros2_jazzy.sh  requirements.txt  setup_env.sh
config/: fastdds_localhost.xml  lidar_params.yaml  nav2_params.yaml  radar_params.yaml  robot_sensors.yaml  slam_toolbox.yaml
docker/: .env  docker-compose.yaml  start.sh  stop.sh  test.sh
docker/isaac-sim/: Dockerfile  entrypoint.sh
docker/ros2-bridge/: Dockerfile  entrypoint.sh
isaac_sim_scripts/: enable_extensions.py  launch_scene.py  robot_teleop.py  run_headless.py
launch/: full_stack.launch.py  nav2.launch.py  slam.launch.py
radar_analysis/: compare_clouds.py  lidar_pointcloud.py  parse_radar_udp.py  radar_map.py  radar_pointcloud.py  record_bags.py  run_analysis.py  sensor_fusion.py  visualize.py
ros2_ws/src/radar_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/radar_bridge/config/: radar_bridge.yaml
ros2_ws/src/radar_bridge/launch/: radar_bridge.launch.py
ros2_ws/src/radar_bridge/radar_bridge/: lidar_to_ros2.py  radar_to_ros2.py  udp_listener.py
rviz/: radar_comparison.rviz
tests/: test_analysis.py  test_config.py  test_integration.py  test_radar_map.py  test_run_analysis.py  test_scenario_variations.py  test_sensor_fusion.py  test_udp_listener.py
